# aoc2024

./: CMakeLists.txt
apps/: CMakeLists.txt  part2.cpp
include/aoc2024/: sol.hpp
src/: CMakeLists.txt
src/day1/: part01.cpp  part02.cpp
src/day10/: part01.cpp  part02.cpp
src/day11/: part01.cpp  part02.cpp
src/day12/: part01.cpp  part02.cpp
src/day13/: part01.cpp  part02.cpp
src/day14/: part01.cpp  part02.cpp
src/day15/: part01.cpp  part02.cpp
src/day16/: part01.cpp  part02.cpp
src/day2/: part01.cpp  part02.cpp
src/day3/: part01.cpp  part02.cpp
src/day4/: part01.cpp  part02.cpp
src/day5/: part01.cpp  part02.cpp
src/day6/: part01.cpp  part02.cpp
src/day7/: part01.cpp  part02.cpp
src/day8/: part01.cpp  part02.cpp
src/day9/: part01.cpp  part02.cpp
